Added DELETE /users/me.
